nexus/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  type: NodePort
  selector:
    app: nexus
  ports:
    - name: http
      port: 8081
      targetPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      volumes:
        - name: nexus-vol
          persistentVolumeClaim:
            claimName: infra
      containers:
        - name: nexus
          image: sonatype/nexus3:3.69.0-java17
          imagePullPolicy: Always
          volumeMounts:
            - name: nexus-vol
              subPath: nexus-vol
              mountPath: /nexus-data
          ports:
            - name: http
              containerPort: 5672
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 5672
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 5672
          resources:
            limits:
              cpu: "2"
              memory: "1Gi"
            requests:
              cpu: "1"
              memory: "512Mi"
