nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  type: NodePort
  selector:
    app: nexus
  ports:
    - name: http
      port: 8081
      targetPort: 8081
