nexus/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nexus
spec:
  ingressClassName: traefik
  rules:
    - host: nexus.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus
                port:
                  number: 8081
